--- a/templates/product/header.html
+++ b/templates/product/header.html
@@ -38,7 +38,7 @@
     </div>
 </nav>
 
-<header class="py-3 mb-4 border-bottom">
+<header class="py-3 border-bottom">
     <div class="container d-flex flex-wrap justify-content-center">
         <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32">
@@ -94,17 +94,6 @@
                         <span>元</span>
                     </span>
                 </div>
-
-<!--                &lt;!&ndash; 第四個下拉選單 &ndash;&gt;-->
-<!--                <div class="dropdown-item">-->
-<!--                    <label for="publishDate">出版日期</label>-->
-<!--                    <select id="publishDate" name="publishDate">-->
-<!--                        <option value="all">All</option>-->
-<!--                        <option value="lastYear">Last Year</option>-->
-<!--                        <option value="last5Years">Last 5 Years</option>-->
-<!--                        <option value="lastDecade">Last Decade</option>-->
-<!--                    </select>-->
-<!--                </div>-->
 
                 <div class="dropdown-row">
                     <button id="cancelButton" onclick="closeDropdown()">取消</button>
