--- a/templates/order/addOrder.html
+++ b/templates/order/addOrder.html
@@ -12,10 +12,13 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/search.css') }}" rel="stylesheet"/>
     <style>
         .content-body {
             min-height: 80vh;
@@ -80,6 +83,8 @@
         </div>
         </form>
     </div>
+    {% include './common/footer.html' %}
+    <script src="{{ url_for('static', filename='js/search.js') }}"></script>
 </body>
 <script>
     // 當頁面加載完成後執行
@@ -122,5 +127,7 @@
         // 更新總價格
         document.getElementById('total-price').textContent = total.toFixed(2); // 固定到兩位小數
     }
+
+
 </script>
 </html>
