--- a/templates/order/viewOrder.html
+++ b/templates/order/viewOrder.html
@@ -11,10 +11,13 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/search.css') }}" rel="stylesheet"/>
     <style>
         .content-body {
             min-height: 80vh;
@@ -64,5 +67,7 @@
         <!-- 繼續購物按鈕 -->
         <a href="{{ url_for('productController.getProducts') }}" class="btn btn-secondary mt-4">繼續購物</a>
     </div>
+    {% include './common/footer.html' %}
+    <script src="{{ url_for('static', filename='js/search.js') }}"></script>
 </body>
 </html>
