--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,11 +1,16 @@
 <style>
-       header {
-            background-color: #fff; /* Set the background color of the header */
-            color: #000; /* Set the text color of the header */
-            padding: 1rem; /* Add some padding for better visual appearance */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
-        }
+   header {
+        background-color: #fff; /* Set the background color of the header */
+        color: #000; /* Set the text color of the header */
+        padding: 1rem; /* Add some padding for better visual appearance */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+    }
 
+    .custom-title {
+        font-size: 28px;
+        font-weight: bold;
+        color: #000000;
+    }
 </style>
 <header class="py-3 mb-4 border-bottom">
     <div class="container d-flex flex-wrap justify-content-center">
@@ -14,7 +19,7 @@
             <svg class="bi me-2" width="40" height="32">
                 <use xlink:href="#bootstrap"></use>
             </svg>
-            <span class="fs-4">Bookmazon</span>
+            <span class="custom-title">Bookmazon</span>
         </a>
     </div>
 </header>
