--- a/templates/login/edit_user_profile.html
+++ b/templates/login/edit_user_profile.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 
-{% include './common/header.html' %}
+{% include 'product/header.html' %}
 
 <div class="container mt-5 content-body">
     <h1 class="text-center mb-4">會員資料表</h1>
