--- a/templates/product/search.html
+++ b/templates/product/search.html
@@ -103,8 +103,13 @@
                                 <form method="POST" action="{{ url_for('productController.getDetailProductInfo', item_id=item.item_id) }}">
                                     <button type="submit" class="btn btn-primary rounded-pill px-3">二手書交易資訊</button>
                                 </form>
-
-                                <button class="btn btn-secondary rounded-pill px-3" type="submit">加入購物車</button>
+                                {% if item.item_status == '1' and item.book_count > 1 %}
+                                <form method="POST" action="{{ url_for('cartController.add_to_cart') }} " class="addToCartForm">
+                                    <input type="hidden" name="item_id" value="{{ item.item_id }}">
+                                    <input type="hidden" name="quantity" value="1"> <!-- 假設每次加入一個商品 -->
+                                    <button type="submit" class="add-to-cart-button btn btn-secondary rounded-pill px-3">加入購物車</button>
+                                </form>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -119,8 +124,54 @@
         </div>
     {% endif %}
 
+{% include 'common/modal.html' %}
 {% include './common/footer.html' %}
 <script src="{{ url_for('static', filename='js/slide.js') }}"></script>
 <script src="{{ url_for('static', filename='js/search.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<script>
+    // Select all forms with the class addToCartForm
+    document.querySelectorAll('.addToCartForm').forEach(form => {
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+            const messageModal = new bootstrap.Modal(document.getElementById('messageModal'));
+
+            // Now create FormData from the current form
+            const formData = new FormData(this);
+
+            fetch('{{ url_for("cartController.add_to_cart") }}', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => {
+                // Check response type
+                if (response.status === 401) {
+                    document.getElementById('messageContent').innerText = '請先登入';
+                    messageModal.show();
+                    setTimeout(()=> {
+                        messageModal.hide();
+                        window.location.href = '{{ url_for("userController.login") }}';
+                    }, 850);
+                    return;
+                }
+                return response.json();
+            })
+            .then(data => {
+                if (data) {
+                    document.getElementById('messageContent').innerText = data.system_message;
+                    messageModal.show();
+                    setTimeout(()=> {
+                        messageModal.hide();
+                    }, 850);
+                }
+            })
+            .catch((error) => {
+                console.log(error);
+            });
+        });
+    });
+
+</script>
+</html>
+
