--- a/templates/order/viewOrder.html
+++ b/templates/order/viewOrder.html
@@ -20,6 +20,12 @@
             min-height: 100vh;
         }
 
+        td, th {
+            vertical-align: middle;
+            text-align:center;
+        }
+
+
     </style>
 </head>
 <body>
@@ -38,8 +44,8 @@
     {% endwith %}
 
     {% if orders|length > 0 %}
-    <table class="table table-hover mt-4">
-        <thead>
+    <table class="table table-striped table-bordered">
+        <thead class="table-light">
         <tr>
             <th>訂單編號</th>
             <th>收件人姓名</th>
@@ -75,7 +81,7 @@
             <td>{{ order.order_total_price }}</td>
             <td>
                 <a href="{{ url_for('orderController.view_order_details', order_id=order.order_id) }}"
-                   class="btn btn-primary btn-sm">查看明細</a>
+                   class="btn btn-outline-primary btn-sm">查看明細</a>
             </td>
         </tr>
         {% endfor %}
