--- a/templates/login/user_profile.html
+++ b/templates/login/user_profile.html
@@ -57,7 +57,6 @@
             min-height: 80vh;
         }
 
-
     </style>
 </head>
 <body>
@@ -69,21 +68,29 @@
     <div class="row">
         <!-- 左邊卡片 -->
         <div class="col-md-4">
-            <div class="card left-card">
+            <div class="card left-card" id="userCard">
+
                 {% if user_info.user_picture_path %}
                 <img src="{{ url_for('static', filename=user_info.user_picture_path) }}"
-                     class="card-img-top user-avatar" alt="User Avatar">
+                     class="card-img-top user-avatar" alt="User Avatar" id="userImage">
                 {% else %}
                 <img src="{{ url_for('static', filename='/assets/img/user_profile_pic/avatar.png') }}"
-                     class="card-img-top user-avatar" alt="User Avatar">
+                     class="card-img-top user-avatar" alt="User Avatar" id="userImage">
                 {% endif %}
 
                 <div class="card-body">
                     <h5 class="card-title user-name">{{ user_info.user_name }}</h5>
+                    <form method="POST" id="uploadForm" action="{{ url_for('userController.update_profile_picture') }}"
+                          enctype="multipart/form-data">
+                        <label for="avatarInput" class="btn btn-primary custom-file-upload">
+                            <span>更換大頭貼</span>
+                        </label>
+                        <input type="file" name="avatar" accept="image/*" id="avatarInput" style="display:none;">
+                    </form>
                 </div>
-
             </div>
         </div>
+
 
         <!-- 右邊卡片 -->
         <div class="col-md-8">
@@ -131,4 +138,11 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+<script>
+    document.getElementById('avatarInput').addEventListener('change', function () {
+        document.getElementById('uploadForm').submit();
+    });
+
+</script>
+
 </html>
