--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -56,7 +56,7 @@
                 <form method="POST" action="{{ url_for('cartController.add_to_cart') }}">
                     <input type="hidden" name="item_id" value="{{ data.item_id }}"  min="0" oninput="validateInput()">
                     <div class="d-flex">
-                        <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="number" value="1" style="max-width: 5rem" />
+                        <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="number" value="1" min='0' style="max-width: 5rem" />
                         <button class="btn btn-outline-dark flex-shrink-0 add-to-cart-button" type="button">
                             <i class="bi-cart-fill me-1"></i>
                             加入購物車
